<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoNegro"
    tools:context=".FilterReview">


    <ImageView
        android:id="@+id/backHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="10dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/filter_title"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:text="@string/filter_tags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupTags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:chipSpacingHorizontal="8dp"
        app:chipSpacingVertical="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/boton"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/filter_tag_1"
            android:checkable="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_tag_2"
            android:background="@color/boton"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:checkable="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_tag_3"
            android:background="@color/boton"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:checkable="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_tag_4"
            android:background="@color/boton"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:checkable="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip5"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_tag_5"
            android:background="@color/boton"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:checkable="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip6"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_tag_6"
            android:background="@color/boton"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:checkable="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip7"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_tag_7"
            android:background="@color/boton"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:checkable="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip8"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_tag_8"
            android:background="@color/boton"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:checkable="true" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchMyReviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/filter_switch_my_reviews"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:padding="8dp"
        app:trackTint="@color/tituloRojo"
        app:thumbTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroupTags" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchExploreReviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/filter_switch_explore_reviews"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:padding="8dp"
        app:trackTint="@color/tituloRojo"
        app:thumbTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchMyReviews" />

    <Button
        android:id="@+id/applyFiltersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/filter_button"
        android:textColor="@color/white"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchExploreReviews" />


</androidx.constraintlayout.widget.ConstraintLayout>