<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoNegro"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"
        tools:context=".EditContent">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/edit_content_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/subtituloGris"
            android:textSize="24sp"
            android:padding="8dp"
            android:text="@string/add_content_title_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:drawablePadding="8dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_content_type"
            android:textColor="@color/subtituloGris"
            android:textSize="24sp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTitle" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchOption1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/add_content_type_movie"
            android:padding="8dp"
            android:textColor="@color/subtituloGris"
            app:trackTint="@color/tituloRojo"
            app:thumbTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchOption2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/add_content_type_serie"
            android:padding="8dp"
            app:trackTint="@color/tituloRojo"
            app:thumbTint="@color/white"
            android:textColor="@color/subtituloGris"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchOption1" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchOption3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/add_content_type_book"
            android:padding="8dp"
            android:textColor="@color/subtituloGris"
            app:trackTint="@color/tituloRojo"
            app:thumbTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchOption2" />

        <TextView
            android:id="@+id/textViewISBN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_content_isbn"
            android:visibility="gone"
            android:textColor="@color/subtituloGris"
            android:textSize="24sp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchOption3" />

        <EditText
            android:id="@+id/etISBN"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:hint="Book ISBN"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewISBN" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/subtituloGris"
            android:textSize="24sp"
            android:padding="8dp"
            android:text="@string/add_content_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etISBN" />

        <EditText
            android:id="@+id/etCategory"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:hint="Select category"
            android:focusable="false"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView14"
            android:textColor="@color/subtituloGris"
            android:textSize="24sp"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_content_synopsis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCategory" />

        <EditText
            android:id="@+id/etSynopsis"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:drawablePadding="8dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/subtituloGris"
            android:textSize="24sp"
            android:padding="8dp"
            android:text="@string/add_content_tags"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSynopsis" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupTags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:chipSpacingHorizontal="8dp"
            app:chipSpacingVertical="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip1"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/boton"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/filter_tag_1"
                android:checkable="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_tag_2"
                android:background="@color/boton"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:checkable="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_tag_3"
                android:background="@color/boton"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:checkable="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_tag_4"
                android:background="@color/boton"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:checkable="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip5"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_tag_5"
                android:background="@color/boton"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:checkable="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip6"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_tag_6"
                android:background="@color/boton"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:checkable="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip7"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_tag_7"
                android:background="@color/boton"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:checkable="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip8"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_tag_8"
                android:background="@color/boton"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:checkable="true" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/subtituloGris"
            android:textSize="24sp"
            android:padding="8dp"
            android:text="@string/add_content_cover_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroupTags" />

        <ImageView
            android:id="@+id/ivCoverImage"
            android:layout_width="102dp"
            android:layout_height="152dp"
            android:background="@drawable/edittext_background"
            android:padding="16dp"
            android:scaleType="centerInside"
            android:src="@android:drawable/ic_menu_gallery"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <Button
            android:id="@+id/btnApplyChanges"
            android:background="@color/boton"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/edit_content_apply_changes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCoverImage" />

        <Button
            android:id="@+id/btnCancel"
            android:background="@color/boton"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_content_cancel_button"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnApplyChanges" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>